@@ -1,3 +1,9 @@
+2005-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* haskell-font-lock.el (haskell-font-lock-symbols-alist): Prefer the
+	unicode version of lambda.  Add two symbols from the Omega language and
+	from Paterson's arrow syntax.
+
 2005-08-24  Steve Chamberlain  <sac@pobox.com>  (tiny patch)
 
 	* haskell-doc.el (haskell-doc-message): Paren typo.
